Last update in formatting

--- a/Assignments/A2/A2 - SIO S1B - S4605632.ipynb
+++ b/Assignments/A2/A2 - SIO S1B - S4605632.ipynb
@@ -19,14 +19,14 @@
     "The following code presents a method to select employees for the **Finance Department**. \n",
     "\n",
     "The following steps are to be considered:\n",
-    "1. Add a column for the intended department of the  employee: Finance \n",
-    "2. Prospective employees should be from the European Union, Norway, and the  UK. \n",
+    "1. **Add a column for the intended department** of the  employee: Finance \n",
+    "2. Prospective employees should be from the **European Union, Norway, and the  UK**. \n",
     "3. Specifically, applicants must meet the following requirements:\n",
-    "    1. have skills at least in Planning \n",
-    "    2. a minimum of 4 years  experience\n",
-    "    3. the education level should be above a BSc. degree (as specified in the Assignment Outline Doc.)\n",
-    "    4. employees should not be at the lowest two tiers of performance (D & E) \n",
-    "    5. spoken language should be three out of Dutch, English, French, Spanish\n",
+    "    1. have skills at least in **Planning** \n",
+    "    2. a minimum of **4 years  experience**\n",
+    "    3. the education level should be above a **BSc. degree** (as specified in the Assignment Outline Doc.)\n",
+    "    4. employees should **not be at the lowest two tiers of performance** (D & E) \n",
+    "    5. spoken language should be **three out of Dutch, English, French, Spanish**\n",
     "\n",
     "-----\n",
     "\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4250acd4",
+   "id": "b402b293",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "43bc983b",
+   "id": "5e1105a8",
    "metadata": {},
    "outputs": [
     {
@@ -719,26 +719,26 @@
     "\n",
     "## Step 2: Data cleaning \n",
     "From the previous steps; we see that: \n",
-    "  1. some candidates have not added their spoken languages - NaNs\n",
+    "  1. some candidates have not added their spoken languages - **NaNs**\n",
     "  2. overall, the naming of the attirbutes is clear and free of homonyms or synonyms. However:\n",
-    "      1. the label for the attibute \"spoken languages\" is inconsisten with the rest (lower case)\n",
-    "      2. the label for \"Education Level\" also doesn't match\n",
+    "      1. the **label for the attibute \"spoken languages\"** is inconsisten with the rest (lower case)\n",
+    "      2. the **label for \"Education Level\"** also doesn't match\n",
     "      3. other changes in the table formatting needed:\n",
-    "         - Changing \"Date of birth\" Dtype to DateTime\n",
-    "         - Removing negative values from \"Years of experience\"\n",
-    "         - Adding the needed column for \"Intended department\"\n",
+    "         - Changing \"Date of birth\" Dtype to **DateTime**\n",
+    "         - Removing **negative values** from \"Years of experience\"\n",
+    "         - Adding the **new column** for \"Intended department\"\n",
     "\n",
     "  3. Regarding conversion needs: \n",
-    "      1. \"Gender\" needs to be converted for uniform naming \n",
-    "      2. EU countries need to be grouped for further filtering \n",
-    "      3. \"Performance levels\" need to be converted into one scale\n",
+    "      1. \"Gender\" needs to be converted for **uniform naming** \n",
+    "      2. EU countries need to be **grouped** for further filtering \n",
+    "      3. \"Performance levels\" need to be **converted** into one scale\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f642386",
+   "id": "23ac1a0b",
    "metadata": {},
    "source": [
     "#### 1. Remove NaNs "
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9740d810",
+   "id": "994cc6a7",
    "metadata": {},
    "source": [
     "#### Change table formatting/ naming"
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5a0a7110",
+   "id": "cc9bad2b",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99df4e0",
+   "id": "88d2e117",
    "metadata": {},
    "source": [
     "#### 3. Converting values to uniform scales"
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8a67c323",
+   "id": "28a16eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f37a0cd5",
+   "id": "6f413857",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba69f84",
+   "id": "4ce1867a",
    "metadata": {},
    "source": [
     "----\n",
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "23db3e36",
+   "id": "44484e14",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0f60f3",
+   "id": "f396983f",
    "metadata": {},
    "source": [
     "----\n",
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c39e17cb",
+   "id": "b8e41be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "c08018fc",
+   "id": "b21e95be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,8 +1491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "7efa381e",
+   "execution_count": 94,
+   "id": "52861c4c",
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2397,7 @@
        "[30 rows x 23 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b186c3c",
+   "id": "787da37d",
    "metadata": {},
    "outputs": [],
    "source": []
